[package]
name = "rainbow-blog-front"
version = "0.1.0"
edition = "2021"
authors = ["Rainbow Team"]
description = "A Medium-style blog frontend built with Dioxus"

[dependencies]
dioxus = "0.6"
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-hooks = "0.6"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "HtmlInputElement", "Element", "DomTokenList", "HtmlElement", "File", "FormData", "Headers", "Request", "RequestInit", "Response", "Navigator", "Clipboard", "Selection", "Range", "DomRect", "Node"] }
js-sys = "0.3"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
once_cell = "1.20"
futures = "0.3"
futures-util = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
web-sys = "0.3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
